// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questions form QuestionAnswerReading Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <p>
          <em>
            Loading...
          </em>
        </p>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Questions form QuestionAnswerSpeaking Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <p>
      <em>
        Loading...
      </em>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Questions form QuestionAnswerWriting Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        <em>
          Loading...
        </em>
      </p>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <p>
      <em>
        Loading...
      </em>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Questions form QuestionManager Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  Question Manager
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    Questions Manager
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col-lg-10"
              >
                <h2
                  class="mb-3"
                >
                  Question Manager
                </h2>
                <div>
                  <p>
                    <em>
                      Loading...
                    </em>
                  </p>
                </div>
              </div>
              <div
                class="col-lg-2 sidebar ftco-animate"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                Question Manager
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  Questions Manager
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-10"
            >
              <h2
                class="mb-3"
              >
                Question Manager
              </h2>
              <div>
                <p>
                  <em>
                    Loading...
                  </em>
                </p>
              </div>
            </div>
            <div
              class="col-lg-2 sidebar ftco-animate"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
